--- a/assets/package.json
+++ b/assets/package.json
@@ -3,27 +3,39 @@
   "license": "MIT",
   "scripts": {
     "deploy": "webpack --mode production",
+    "start": "webpack-dev-server --color",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@polymer/app-layout": "^3.0.2",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "core-js": "^3.1.4",
+    "date-fns": "^1.30.1",
+    "development": "^0.0.6",
+    "hammerjs": "^2.0.8",
+    "lit-element": "^2.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "pwa-helpers": "^0.9.1",
+    "regenerator-runtime": "^0.13.2",
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
-    "webpack-cli": "^3.3.2"
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "raw-loader": "^3.0.0",
+    "stylus": "^0.54.5",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   }
 }
