--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -1,2 +1,17 @@
+# Clean out cache contents from previous deploys
+clean_cache=true
+
+# We can change the filename for the compile script with this option
+compile="bin/compile"
+
+# We can set the version of Node to use for the app here
 node_version=11.15.0
+
+# We can set the version of Yarn to use for the app here
 yarn_version=1.16.0
+
+# Remove node and node_modules directory to keep slug size down if it is not needed.
+remove_node=false
+
+# We can change path that npm dependencies are in relation to phoenix app. E.g. assets for phoenix 1.3 support.
+assets_path=assets
