--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,6 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.0.2",
     "@webcomponents/webcomponentsjs": "^2.2.10",
     "core-js": "^3.1.4",
     "date-fns": "^1.30.1",
@@ -16,9 +15,7 @@
     "lit-element": "^2.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "pwa-helpers": "^0.9.1",
-    "regenerator-runtime": "^0.13.2",
-    "stylus-loader": "^3.0.2"
+    "regenerator-runtime": "^0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -31,8 +28,8 @@
     "file-loader": "^4.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "raw-loader": "^3.0.0",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
